# insure_ai

./: .env.example  BEFORE_AFTER.md  DEVELOPMENT.md  EXAMPLES_API_CALLS.md  FINAL_SUMMARY.md  FLOWS_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.py  README.md  REORGANIZATION_SUMMARY.md  VERIFICATION_CHECKLIST.py  config.py  main.py  pyproject.toml
api/: routes.py
docs/: DOCUMENTATION_INDEX.md  FLOW_CODE_EXAMPLES.md  FLOW_DOCUMENTATION_INDEX.md  FLOW_EXECUTION_GUIDE.md  FLOW_USE_CASES.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  VERIFICATION_CHECKLIST.md
documents/: Manual Seguro Garantia.md  conhecimento.txt  faqs.json
rag/: generator.py  loader.py  retriever.py
scripts/: client.py  flows_diagram.py
src/: config.py  main.py
src/api/: routes.py
src/rag/: faq.py  flows.py  generator.py  loader.py
tests/: test_flows.py
