[project]
name = "chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro Souza",email = "leandrosouzaf30@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "google-genai (>=2.0.0,<3.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
